--- a/.classpath
+++ b/.classpath
@@ -32,5 +32,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Hector/Desktop/mysql-connector-java-5.1.35-bin.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
